<resources>
    <string name="app_name">Smart Air</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_passoword">Forgot Passoword?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_recovery_link">Send recovery link</string>
    <string name="return_">Return</string>
    <string-array name="account_type_array">
        <item>Parent</item>
        <item>Provider</item>
    </string-array>
    <string name="parent_dashboard">Parent Dashboard</string>
    <string name="account_actions">Account Actions</string>
    <string name="add_child_profile">Add Child Profile</string>
    <string name="add_child_account">Add Child Account</string>
    <string name="linked_children">Linked Children</string>
    <string name="no_children_linked">No children linked yet. Click \'Add Child Account\' to get started.</string>
    <string name="add_child">Add Child</string>
    <string name="child_information">Child Information</string>
    <string name="account_details">Account Details</string>
    <string name="sign_in_details">Sign In Details</string>
    <string name="create_child_account">Create Child Account</string>
    <string name="create_child_profile">Create Child Profile</string>
    <string name="child_name">Child Name</string>
    <string name="linked_date">Linked: Date</string>
    <string name="unlink">Unlink</string>
    <string name="symptoms">Symptoms</string>
    <string name="triggers">Triggers</string>
    <string name="zone_history">Zone History</string>
    <string name="rescue_control_usage">Rescue/Control Usage</string>
    <string name="emergency_history">Emergency History</string>
    <string name="med_page">Medicine</string>
    <string name="edit_pb">Edit PB</string>
    <string name="linked_with">Currently Linked with: parentX</string>
    <string-array name="frequency_options">
        <item>Daily (1x)</item>
        <item>Twice Daily (2x)</item>
        <item>Every Other Day</item>
    </string-array>
</resources>