<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".child.ChildHistoryActivity">

            <TextView
                android:id="@+id/symptomText"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/symptoms"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/triggerText"
                app:layout_constraintHorizontal_weight="1"/>

            <TextView
                android:id="@+id/triggerText"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/triggers"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/symptomText"
                app:layout_constraintHorizontal_weight="1"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/symptomGraph"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/symptomText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/triggerGraph"
                app:layout_constraintHorizontal_weight="1"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/triggerGraph"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/triggerText"
                app:layout_constraintStart_toEndOf="@id/symptomGraph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"/>

            <TextView
                android:id="@+id/zoneText"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/zone_history"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/symptomGraph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/zoneGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/zoneText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/frequencyText"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/rescue_control_usage"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/zoneGraph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/frequencyGraph"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/frequencyText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/emergencyText"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/emergency_history"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/frequencyGraph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/emergencyHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHeight="100dp"
                android:text="Loading Data..."
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/emergencyText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="Return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>